--- a/analysis/gdp_prediction_analysis_shortened_data.Rmd
+++ b/analysis/gdp_prediction_analysis_shortened_data.Rmd
@@ -30,15 +30,6 @@ library(ggplot2)
 library(tseries)
 library(kableExtra)
 library(knitr)
-# read data set
-data <- read.csv("../data/economic_indicators_all_ex_3mo_china_inc_treas3mo.csv")
-# split data into a train and test set
-data_train = data %>% dplyr::slice(1:(dplyr::n()-n.ahead))
-data_test = data %>% dplyr::slice((dplyr::n()-n.ahead), dplyr::n())
-# global settings
-var_interest = 'gdp_change'
-batch_size = 50
-n.ahead = 2
 ```
 
 # Introduction
@@ -87,8 +78,29 @@ The exogenous variables are summerized in the table below.
 | housingpermitschg | Change in New Private Housing Units Authorized by Building Permits | PERMIT |
 | treas10yr3mo | 10-Year Treasury Constant Maturity Minus 3-Month Treasury Constant Maturity | T10Y3M |
 
+
 ```{r}
-data %>% glimpse()
+# read data set
+data <- read.csv("../data/economic_indicators_all_ex_3mo_china_inc_treas3mo.csv")
+data %>%  glimpse()
+```
+
+```{r}
+# Remove the date column
+data = data %>% dplyr::select(-date)
+```
+
+```{r}
+# global settings
+var_interest = 'gdp_change'
+batch_size = 50
+n.ahead = 2
+```
+
+```{r}
+# split data into a train and test set
+data_train = data %>% dplyr::slice(1:(dplyr::n()-n.ahead))
+data_test = data %>% dplyr::slice((dplyr::n()-n.ahead), dplyr::n())
 ```
 
 # Response Variable
@@ -173,9 +185,6 @@ The following models are selected by both criteria:
 * ARMA(1, 2)
 * ARMA(2, 1)
 
-
-### Model Fit
-
 An ARMA(2,0) was fit based on the model ID from AIC and BIC.
 The factor table for the estimated model does not show roots near the unit circle.
 
@@ -187,67 +196,56 @@ The following factored model is suggested by the MLE fit:
 
 (1-0.7391 $B$ )(1+0.3472 $B$ )( $X_{t}$ - `r mean(data$gdp_change)`) = $a_{t}$ with $\sigma_{a}^2$ = `r est.s$avar`
 
+### Model Fit
+
+```{r results='hide'}
+# setup object with unitvariate model
+models = list("AR(2)" = list(phi = est.s$phi, vara = est.s$avar, res = est.s$res, sliding_ase = TRUE))
+mdl_compare_uni = ModelCompareUnivariate$new(data = data_train, var_interest = var_interest, mdl_list = models,
+                                             n.ahead = n.ahead, batch_size = batch_size)
+```
+
 #### Evaluation of the Residuals
 
-The results from the model fit appear to be nearly consisent with white noise.
-The resulting realization appears very close to white noise.
-Several of the autocorrelations of the results are marginally significant, but not more than expected.
+The residuals appear to be nearly consisent with white noise. Some of the autocorrelations of the residuals are marginally significant, but not more than expected. 
 As secondary evaluation, the Ljung-Box test does not reject the null hypothesis that residuals are not white noise.
-However, all the models selected by AIC and BIC show a similar behavior.
 
-```{r, message=FALSE, echo=FALSE}
-# evaluate residuals of arma model
-tbl <- tswgewrapped::evaluate_residuals(est.s$res)
+```{r message=FALSE, echo=FALSE}
+tbl = mdl_compare_uni$evaluate_residuals()
 tbl %>%
   select(-c(Model)) %>%
   kable() %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
 ```
 
+
 #### Model Characterisics
 
 Realizations were simulated from the fit model for comparing realizations, ACFs, and spectral densities to the data.
 
 * The realization simulated from the univariate model appear to have a similar amount of wandering and sharp changes.
-* The ACFs of the simulated realizations appear to exhibit similar behavior through lag 7. After lag 7, one of the ACFs diverge from the other realizations. At lag 12 all of the ACFs start diverge.
-* The spectral densitied generally show similar behavior: a peak at or near a frequency of zero with roll-off that ends at about frequency 0.15. One spectral density shows a peak slightly above 0 (about 0.03) with a steaper roll off. However, this spectral density is still exhibiting the general behavior.
+* The ACFs of the simulated realizations appear to exhibit similar behavior through lag 7. After lag 7, one of the ACFs diverge from the other realizations. However the magnitude of the ACFs at these lags is fairly small so it is not a concern.
+* The spectral densitied generally show similar behavior: a peak at or near a frequency of zero with roll-off that ends at about frequency 0.15. One spectral density shows a peak slightly above 0 (about 0.03) with a steaper roll off. However, this spectral density is still exhibiting the same general behavior consistent with the realization.
 
-```{r}
+```{r fig.height=6}
 mdl_compare_uni$plot_multiple_realizations()
 ```
 
-
-
 ### Forecast Results
 
+Generally, the realization is contained in the forecast limits of the model, although the model is unable to capture the sharp changes in the GDP from quarter to quarter. Also, the model is unable to capture the steap dip near time step 100. 
 
-```{r, results='hide'}
-# setup object with unitvariate model
-models = list("AR(2)" = list(phi = est.s$phi, theta = est.s$theta, vara = est.s$avar,
-                             res = est.s$res, sliding_ase = TRUE))
-
-mdl_compare_uni = tswgewrapped::ModelCompareUnivariate$new(data = data_train$gdp_change, mdl_list = models,
-                                                           n.ahead = n.ahead, batch_size = batch_size)
-```
-
-The model appears to capture the movement of the mean with 2-step ahead forecasts.
-The model is unable to capture the steap dip near time step 100.
-Generally, the realization is contained in the forecast limits of the model, but the realization does not exhibit significant wandering.
-The sliding window ASE shows that the model performs badly near the extreme step.
-
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, fig.width = 8}
 # show sliding window forecasts
 tbl <- mdl_compare_uni$plot_batch_forecasts(only_sliding = TRUE)
 ```
 
-Viewing the rolling window ASE over time, we see that the most extreme value occurs at the same location as the extreme value.
-This is not surprising since an ARMA model will tend toward the mean and this value is far from the window mean.
+Viewing the rolling window ASE over time, we see that the most extreme value occurs at the same location as the extreme value of the realization. This is not surprising since an ARMA model will tend toward the mean and this value is far from the window mean.
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, fig.width = 8}
 # show ASE over time (windows)
 tbl <- mdl_compare_uni$plot_batch_ases(only_sliding = TRUE)
 ```
-
 
 ## VAR Model
 
@@ -255,28 +253,26 @@ tbl <- mdl_compare_uni$plot_batch_ases(only_sliding = TRUE)
 
 The realizations of the exogeneous variables are shown below.
 
-The variables `fedintrate` and `treas3mo` appear to be collinear; we will keep `fedintrate`.
-
-```{r, fig.width=15, fig.height=15}
+```{r, fig.width=10, fig.height=10}
 eda <- MultivariateEDA$new(data = data_train, var_interest = var_interest)
 eda$plot_data(ncol = 3)
 ```
-
-
 
 ### CCF Analysis
 
 **Summary**
 
-We suspect that `nfjobschg`, `ipichg`, `treas10yr`, `fedintrate`, `cpichg`, `inventorieschg`, `ppichg`, `homeownership`, `personincomechg`, `housingpermitschg`, `treas10yr3mo`, `wilshirechg`, `ipichg` will be useful given the cross-correlations.
+Based on the CCF analysis, we find that very few variables show a strong cross correlation with `gdp_change`. The most significant cross correlation was obtained for `nfjobschg`, `ipichg`, `inventorieschg`, `treas10yr`, `treas3mo` (top 5) and most of the variables showed the max cross correlation at lag = 0. This would mean that it might be benefitial to keep a low lag value in the VAR model (esepcially given that we have many exogenous variables and not a lot of data points).
+
+**NOTE: The CCF Analysis conclusions and values are based on negative lags of the variables with respect to 'gdp_change' only since we wont have the future values to forecast the results.**
 
 ```{r, message=FALSE}
 # plot the ccfs and get back the ccf table
 ccf <- eda$plot_ccf_analysis(negative_only = TRUE)
+
 # show the ccf table
 ccf %>%
-  slice(1:5) %>%
-  select(-c(max_ccf_index_adjusted)) %>%
+  dplyr::select(-c(max_ccf_index_adjusted)) %>%
   kable() %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
 ```
@@ -286,29 +282,51 @@ ccf %>%
 
 The VAR models selected by the following process.
 
-* AIC was used to select the maximum lag to consider.
+* BIC was used to select the maximum lag to consider (since we wanted to have a small lag order selection given the large number of exogenous variables and the conclusions from the CCF analysis).
 * The model of the selected lag was fit.
-* Variables insignificant in the fit are dropped and the maximum lag was reduced to the maximum significant lag found in the fit.
-
+* In order to reduce the variables further, those variables that were insignificant in the fit were dropped and the maximum lag was reduced further to the maximum significant lag found in the fit. This is a crude variable selection technique. In the future, we will evaluate a better variable selection technique.
 
 ```{r, message=FALSE, warning=FALSE}
 # maximum lag to consider in VAR models
 lag.max = 10
 
 # List of VAR models to build for comparison
-models = list("VAR AIC None" = list(select = "aic", trend_type = "none", lag.max = lag.max),
-              "VAR AIC Trend" = list(select = "aic", trend_type = "trend", lag.max = lag.max),
-              "VAR AIC Both" = list(select = "aic", trend_type = "both", lag.max = lag.max))
+models = list("VAR BIC None" = list(select = "bic", trend_type = "none", lag.max = lag.max),
+              "VAR BIC Trend" = list(select = "bic", trend_type = "trend", lag.max = lag.max),
+              "VAR BIC Both" = list(select = "bic", trend_type = "both", lag.max = lag.max))
 
 # instantiate the model build object
 mdl_build_var = ModelBuildMultivariateVAR$new(data = data_train, var_interest = var_interest,
                                               mdl_list = models, verbose = 0)
-# summerize the the recommended models
-mdl_build_var$summarize_build()
+```
+
+The model building process shows that even though we had used lag.max = 10, the p (lag order) selected by VARSelect was 6.
+
+```{r}
+# summarize the the recommended models
+summary_build = mdl_build_var$summarize_build()
+
+summary_build %>% 
+  kable() %>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
+```
+
+```{r}
 # get the recommended models
-mdl_build_var$get_recommendations()
+mdl_build_var$get_recommendations() %>% 
+  kable() %>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
+```
+
+The above table shows that for the "VAR BIC Both" model, only 4 lagged variables were significant and that too upto a max lag of 3. For the other 2 models, only 2 lagged variables were significant but till a lag of 6. So we will continue to build the recommended models with this reduced set of variables and lags.
+
+
+```{r}
 # build the VAR models
 mdl_build_var$build_recommended_models()
+```
+
+```{r}
 # return the VAR models for comparison
 models = mdl_build_var$get_final_models(subset = 'r')
 
@@ -316,22 +334,28 @@ models = mdl_build_var$get_final_models(subset = 'r')
 for (name in names(models)){
   models[[name]][['sliding_ase']] = TRUE
 }
+```
 
+### Compare the models
+
+```{r}
 # Initialize the ModelCompareMultivariateVAR object
 mdl_compare_var = ModelCompareMultivariateVAR$new(data = data_train, var_interest = var_interest,
                                                   mdl_list = models, n.ahead = n.ahead, batch_size = batch_size, verbose = 1)
 ```
 
-The rolling window forecasts are shown below.
-The model with trend and the model without trend and constant terms, appear to overshoot the movement of the realization.
-This is especially true just after the large dip in the realization after time step 100.
+Note: 
 
-```{r, warning=FALSE, message=FALSE}
-# show forecasts on batches
+* If the sliding window is not large enough, we can not build the models with the variables provided. Hence the k values used in the VAR model must be reduced (this is reflected in the Final_K column). If we do run into this issue, the models will most likely not turn out to be good since we wont have enough degrees of freedom to compute the residuals. 
+* In this case however, since we have reduced the variables to be used for model development, we do not run into this issues and Final_K is the same as the value of K (Init_K) recommended by the model build process.
+
+The rolling window forecasts are shown below. The model with trend only (VAR BIC Trend - R) and the model without trend and constant terms (VAR BIC None - R), appear to overshoot the movement of the realization. This is especially true just after the large dip in the realization after time step 100.
+
+```{r, warning=FALSE, message=FALSE, fig.width = 8}
 tbl <- mdl_compare_var$plot_batch_forecasts()
 ```
 
-Overall, the model with both trend and constant appears produce forecasts with lower ASEs on average.
+Overall, the model with both trend and constant term (VAR BIC Both - R) appears produce forecasts with lower ASEs on average.
 
 ```{r}
 # show distributions of ASEs
@@ -341,16 +365,14 @@ tbl <- mdl_compare_var$plot_boxplot_ases()
 Visualizing the realizations over time shows that the model with both trend and constant appears to perform best.
 The large ASEs from the forecasts occur around the sharp dip in the realization just after time step 100.
 
-```{r}
-# 
+```{r fig.width=8, warning=FALSE}
 p = mdl_compare_var$plot_batch_ases()
 ```
 
-The model with both trend and constant terms appears to best.
-We will drop the other two models from further analysis.
+Since the model with both trend and constant terms appears to be the best, we will drop the other two models from further analysis.
 
 ```{r, warning=FALSE, message=FALSE}
-mdl_compare_var$keep_models(mdl_names = c("VAR AIC Both - R"))
+mdl_compare_var$keep_models(mdl_names = c("VAR BIC Both - R"))
 ```
 
 ### Model Fit
@@ -360,7 +382,7 @@ The autocorrelations of the residuals appear to be marginally inconsistent with 
 Since these residuals are close to white noise, we will assume the model is sufficient for modeling these data.
 
 ```{r, echo=FALSE}
-resids <- resid(models$`VAR AIC Both - R`$varfit)
+resids <- resid(models$`VAR BIC Both - R`$varfit)
 tbl <- tswgewrapped::evaluate_residuals(resids[ , 1])
 ```
 
@@ -369,33 +391,28 @@ tbl <- tswgewrapped::evaluate_residuals(resids[ , 1])
 
 ### Hyperparameter Grid Search
 
-A grid search is performed over number of repetitions, the number of hidden layers, and whether seasonality is allowed.
-
+Since it is sometimes hard to figure out the hyperparameters to be used for the neural network model, we will perform a random grid search over number of repetitions (reps), the number of hidden layers (hd), and whether seasonality should be automatically detected or not (allow.det.season) to figure out the best settings.
 
 ```{r, results='hide', warning=FALSE}
-# setup search grid
-nnfor_grid = expand.grid(reps = c(15, 20, 25),
-                         hd = c(1:5),
-                         allow.det.season = c(FALSE, TRUE))
 # search for best NN hyperparameters in given grid
 model = ModelBuildNNforCaret$new(data = data_train, var_interest = var_interest,
-                                 search = 'grid', grid = nnfor_grid, batch_size = batch_size,
-                                 h = n.ahead, parallel = TRUE, seed = 1,
+                                 search = 'random', tuneLength = 5, parallel = TRUE, seed = 1,
+                                 batch_size = batch_size, h = n.ahead, 
                                  verbose = 1)
 
-temp <- model$summarize_best_hyperparams()
-res <- model$summarize_hyperparam_results()
-final.ase <- filter(res, reps == temp$reps &
-                      hd == temp$hd &
-                      allow.det.season == temp$allow.det.season)[['ASE']]
 ```
 
-The ASE associated with the grid of hyperparameters is shown in the heatmap below.
-The panel (True/False) is for the seasonality option.
-Seasonality does not appear to have an affect on ASE.
-However, the combination of number of hidden layers and number of repetitions strongly affects the ASE.
-The best hyperparameters based on this grid search are `r temp$reps` repetitions and `r temp$hd` hidden layers, 
- which has a mean rolling window ASE of `r final.ase`.
+The ASEs associated with the grid of hyperparameters is shown in the table and heatmap below.
+
+```{r}
+res <- model$summarize_hyperparam_results()
+```
+
+```{r, echo=FALSE}
+res %>%
+  kable() %>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
+```
 
 ```{r}
 model$plot_hyperparam_results()
@@ -404,46 +421,26 @@ model$plot_hyperparam_results()
 The best hyperparemeters are shown below
 
 ```{r}
-tbl <- model$summarize_best_hyperparams() 
+best <- model$summarize_best_hyperparams()
 ```
 
-
 ```{r, echo=FALSE}
-tbl %>%
+best %>%
   kable() %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
 ```
 
-
-```{r, results='hide', warning=FALSE}
-# get back the final model
-
-# setup search grid
-nnfor_grid = expand.grid(reps = c(temp$reps),
-                         hd = c(temp$hd),
-                         allow.det.season = c(temp$allow.det.season))
-# search for best NN hyperparameters in given grid
-model = ModelBuildNNforCaret$new(data = data.train, var_interest = "gdp_change", m = 6,
-                                 search = 'grid',
-                                 grid = nnfor_grid,
-                                 batch_size = 44, h = 2,
-                                 parallel = TRUE,
-                                 seed = 1,
-                                 verbose = 1)
-
-caret_model = model$get_final_models()
-mdl_compare_nn = ModelCompareNNforCaret$new(data = data.train,
-                                         var_interest = var_interest,
-                                         mdl_list = caret_model,
-                                         verbose = 1)
+```{r}
+final.ase <- filter(res, reps == best$reps &
+                    hd == best$hd &
+                    allow.det.season == best$allow.det.season)[['ASE']]
 ```
+
+The best hyperparameters based on this grid search are `r best$reps` repetitions and `r best$hd` hidden layers, and allow.det.season = `r best$allow.det.season` which has a mean rolling window ASE of `r final.ase`.
 
 ### Model Fit
 
-A plot of the residuals shows that the residuals do not appear to be consistent with white noise.
-This is also evident from the ACF, which has more significant autocorrelations than expected.
-However, we will keep this model as it may still be useful as we are forecasting a short horizon.
-
+A plot of the residuals shows that the residuals are consistent with white noise with about as many excursions as expected in the ACF plot.
 
 ```{r}
 # get back the nnfor mlp model
@@ -452,45 +449,41 @@ model.nnfor <- model$get_final_models(subset = 'r')
 # extract the fitted values for white noise evaluation
 values.fitted <- as.numeric(model.nnfor$fitted)
 # find the difference in length between the realization and the fitted values
-size <- length(data.train$gdp_change)
-diff.size <- length(data.train$gdp_change) - length(values.fitted) + 1
+size <- length(data_train$gdp_change)
+diff.size <- length(data_train$gdp_change) - length(values.fitted) + 1
 # get the residuals (fitted - realization)
-resids <- values.fitted - data.train$gdp_change[diff.size : size]
-
-tbl <- tswgewrapped::evaluate_residuals(resids)
-tbl %>%
-  select(-c(Model)) %>%
-  kable() %>%
-  kable_styling(bootstrap_options = "striped", full_width = F)
-
+resids <- values.fitted - data_train$gdp_change[diff.size : size]
 ```
 
+```{r warning = FALSE}
+tbl <- tswgewrapped::evaluate_residuals(resids)
+```
 
 ### Forecast Results
 
-The rolling window forecasts for the neural network model is shown below.
-In general, the forecasts do not appear to capture the variance of the realization.
-In fact, the forecasts are in the opposite direction of the realization such as the instance near time step 75.
-This model also appears to miss the dips near step 100.
-
 ```{r}
+caret_model = model$get_final_models(subset = 'a')
+# Initialize the ModelCompareNNforCaret object
+mdl_compare_mlp = ModelCompareNNforCaret$new(data = data_train, var_interest = var_interest,
+                                             mdl_list = caret_model,
+                                             verbose = 0)
+```
+
+The rolling window forecasts for the neural network model (all models in the grid) is shown below.
+
+```{r fig.width = 8}
 # plot the rolling window forecasts
-p = mdl_compare_nn$plot_batch_forecasts()
+p = mdl_compare_mlp$plot_batch_forecasts()
 ```
 
 The plot of ASE over time shows that the ASE appears to spike frequently, especially near sharp changes in the realization.
 
-```{r, warning=FALSE}
+```{r, warning=FALSE, fig.width = 8}
 # plot the ASC over time
-p = mdl_compare_nn$plot_batch_ases() 
+p = mdl_compare_mlp$plot_batch_ases() 
 ```
 
-## Comparison of Base Models
-
-The rolling window ASE distributions for each type of model constructed are shown below.
-Overall, the ARMA(2, 0) model produces forecasts with the least error as the mean and upper IQR line appear to have a lower value than the other two models.
-Each model has a window forecast ASE above a value of 60. 
-These are the forests for the steap dip in the realization after time step 100, indicating that none of the models are forecasting this change.
+## Comparison the best models
 
 ```{r}
 newxreg <- data_test %>% dplyr::select(-!!var_interest)
@@ -500,10 +493,23 @@ mdl_combine = ModelCombine$new(data = data_train,
                                var_interest = var_interest,
                                uni_models = mdl_compare_uni, 
                                var_models = mdl_compare_var, 
-                               mlp_models = mdl_compare_nn,
+                               mlp_models = mdl_compare_mlp,
                                verbose = 1)
+```
+
+The rolling window ASE distributions for each type of model constructed are shown below.
+Overall, the ARMA(2, 0) model produces forecasts with the least error as the mean and upper IQR line appear to have a lower value than the other two models.
+Each model has a window forecast ASE above a value of 60. These are the forests for the steap dip in the realization after time step 100, indicating that none of the models are forecasting this change.
+
+```{r}
 # plot the distributions of ASE from the rolling windows
 mdl_combine$plot_boxplot_ases()
+```
+
+However, statistically speaking there is no difference in the performance of these models (p-value from ANOVA = 0.503). Hence, we will eventually keep all 3 models in the final ensemble.
+
+```{r}
+comparison = mdl_combine$statistical_compare()
 ```
 
 Comparing the rolling window forecasts of each model, we can make several observations.
@@ -513,31 +519,98 @@ The neural network model does not capture the movement of the realization as wel
 This is particularly evident in the second half of the forecasts where the neural network appears to have a high variance.
 Additionally, all models appear to lag the major dip in the realization after time step 100.
 
-```{r}
+```{r warning = FALSE, fig.width = 8}
 mdl_combine$plot_batch_forecasts()
 ```
 
-
-
 ## Ensemble Models
 
-Ensembles of the base models are created by combining the forecasts of the base models by selecting the mean forecasted value, selecting the median forecasted value, and building a linear regression model.
-The assumptions for linear regression appear to be reazonably met based on the residual plots shown below.
+### Simple Forecasts (Test data)
+```{r}
+p = mdl_combine$plot_simple_forecasts(lastn = FALSE, newxreg = newxreg, zoom = 20) 
+```
 
+Ensembles of the base models are created by combining the forecasts of the base models using a simple linear regression model. In addition 2 naive ensembles were also created which combined the base model forecasts using a mean and a median operator.
+
+### Create the ensemble (glm + naive)
 ```{r}
 mdl_combine$create_ensemble()
 ```
 
-```{r}
+**Based on the residual and QQ plots, the assumptions for linear regression appear to be reazonably met.**
 
+### Forecasts with Ensemble Models
+
+```{r}
+test_var_interest = data_test[var_interest]
+```
+
+```{r echo=FALSE}
+print("Expected Values")
+print(test_var_interest)
+```
+
+#### Naive with combine = 'median'
+```{r}
+ensemble1 = mdl_combine$predict_ensemble(naive = TRUE, comb = 'median', newxreg = newxreg)
+```
+
+```{r echo=FALSE}
+ensemble1 %>% 
+  kable() %>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
 ```
 
 ```{r}
-#mdl_combine$predict_ensemble(naive = TRUE, newxreg = newxreg)
+ASE1 = mean((ensemble1$ensemble - test_var_interest$gdp_change)^2)
+```
+
+```{r echo=FALSE}
+print(paste0("The ASE value with the naive median ensemble = ", round(ASE1, 4)))
+```
+
+#### Naive with combine = 'mean'
+```{r}
+ensemble2 = mdl_combine$predict_ensemble(naive = TRUE, comb = 'mean', newxreg = newxreg)
+```
+
+```{r echo=FALSE}
+ensemble2 %>% 
+  kable() %>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
+```
+
+```{r}
+ASE2 = mean((ensemble2$ensemble - test_var_interest$gdp_change)^2)
+```
+
+```{r echo=FALSE}
+print(paste0("The ASE value with the naive mean ensemble = ", round(ASE2, 4)))
+```
+
+#### glm ensemble
+```{r}
+ensemble3 = mdl_combine$predict_ensemble(naive = FALSE, newxreg = newxreg)
+```
+
+```{r echo=FALSE}
+ensemble3 %>% 
+  kable() %>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
+```
+
+```{r}
+ASE3 = mean((ensemble3$ensemble - test_var_interest$gdp_change)^2)
+```
+
+```{r echo=FALSE}
+print(paste0("The ASE value with the glm ensemble = ", round(ASE3, 4)))
 ```
 
 
 ## Conclusion
+
+TODO
 
 # References
 
